Add name[pt] to doc icon

--- a/applications/slitaz-doc.desktop
+++ b/applications/slitaz-doc.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Documentation
+Name[pt]=Documentação
 Exec=firefox /usr/share/doc/slitaz/index.html
 Icon=slitaz-doc.png
 Type=Application
