--- a/applications/slitaz-doc.desktop
+++ b/applications/slitaz-doc.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Documentation
-Name[pt]=Documentação
+Name[pt]=DocumentaÃ§Ã£o
 Exec=firefox /usr/share/doc/slitaz/index.html
 Icon=slitaz-doc.png
 Type=Application
