Fix desktop file: netsurf needs file://

--- a/applications/slitaz-doc.desktop
+++ b/applications/slitaz-doc.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Documentation
 Name[pt]=Documentação
-Exec=firefox /usr/share/doc/slitaz/index.html
-Icon=slitaz-doc.png
+Exec=browser file:///usr/share/doc/slitaz/index.html
+Icon=slitaz-doc
 Type=Application
