Netsurf needs file:// and small CSS fix

--- a/applications/system-doc.desktop
+++ b/applications/system-doc.desktop
@@ -2,7 +2,7 @@
 Name=System Doc
 Name[fr]=Doc du système
 Name[pt]=Documentação do Sistema
-Exec=browser /usr/share/doc
+Exec=browser file:///usr/share/doc/slitaz/index.html
 Icon=slitaz-doc.png
 Type=Application
 Categories=Documentation;
