--- a/applications/slitaz-doc.desktop
+++ b/applications/slitaz-doc.desktop
@@ -1,6 +1,5 @@
 [Desktop Entry]
 Name=Documentation
-Name[pt]=Documentação
-Exec=browser file:///usr/share/doc/slitaz/index.html
-Icon=slitaz-doc
+Exec=GtkLauncher file:///usr/share/doc/slitaz/index.html
+Icon=slitaz-doc.png
 Type=Application
