Add pt_BR on desktop files

--- a/applications/slitaz-doc.desktop
+++ b/applications/slitaz-doc.desktop
@@ -1,5 +1,7 @@
 [Desktop Entry]
 Name=Documentation
+Name[pt]=Documentação
+Name[pt_BR]=Documentação
 Exec=browser file:///usr/share/doc/slitaz/index.html
 Icon=slitaz-doc.png
 Type=Application
