--- a/applications/system-doc.desktop
+++ b/applications/system-doc.desktop
@@ -2,6 +2,7 @@
 Name=System Doc
 Name[fr]=Doc du système
 Name[pt]=Documentação do Sistema
+Name[pt_BR]=Documentação do Sistema
 Exec=browser file:///usr/share/doc/slitaz/index.html
 Icon=slitaz-doc.png
 Type=Application
