--- a/applications/system-doc.desktop
+++ b/applications/system-doc.desktop
@@ -4,6 +4,6 @@ Name[fr]=Doc du système
 Name[pt]=Documentação do Sistema
 Name[pt_BR]=Documentação do Sistema
 Exec=browser file:///usr/share/doc/slitaz/index.html
-Icon=slitaz-doc.png
+Icon=slitaz-doc
 Type=Application
 Categories=Documentation;
