Russian translation added

--- a/applications/slitaz-doc.desktop
+++ b/applications/slitaz-doc.desktop
@@ -2,6 +2,7 @@
 Name=Documentation
 Name[pt]=Documentação
 Name[pt_BR]=Documentação
+Name[ru]=Документация
 Exec=browser file:///usr/share/doc/slitaz/index.html
 Icon=slitaz-doc
 Type=Application
