--- a/applications/system-doc.desktop
+++ b/applications/system-doc.desktop
@@ -3,6 +3,7 @@ Name=System Doc
 Name[fr]=Doc du système
 Name[pt]=Documentação do Sistema
 Name[pt_BR]=Documentação do Sistema
+Name[ru]=Системная документация
 Exec=browser file:///usr/share/doc/slitaz/index.html
 Icon=slitaz-doc
 Type=Application
