System doc goes in Documentation menu

--- a/applications/system-doc.desktop
+++ b/applications/system-doc.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Type=Application
-Name=System Doc
-Name[fr]=Doc du système
+Name=System Documentation
+Name[fr]=Documentation du système
 Name[pt]=Documentação do Sistema
 Name[pt_BR]=Documentação do Sistema
 Name[ru]=Системная документация
 Name[zh_CN]= 系统文档
 Exec=browser file:///usr/share/doc/slitaz/index.html
 Icon=slitaz-doc
-Categories=System;Documentation;
+Categories=Documentation;
